--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
   "devDependencies": {
     "@rocketseat/eslint-config": "1.2.0",
     "@types/bcryptjs": "2.4.2",
+    "@types/multer": "1.4.11",
     "@types/node": "18.14.1",
     "@types/supertest": "2.0.12",
     "@vitest/coverage-c8": "0.28.5",
@@ -45,6 +46,7 @@
     "dayjs": "1.11.7",
     "dotenv": "16.0.3",
     "fastify": "4.13.0",
+    "multer": "1.4.5-lts.1",
     "zod": "3.20.6"
   }
 }
