--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
   "devDependencies": {
     "@rocketseat/eslint-config": "1.2.0",
     "@types/bcryptjs": "2.4.2",
+    "@types/fastify-multipart": "0.7.0",
     "@types/multer": "1.4.11",
     "@types/node": "18.14.1",
     "@types/supertest": "2.0.12",
@@ -41,11 +42,13 @@
   "dependencies": {
     "@fastify/cookie": "8.3.0",
     "@fastify/jwt": "6.7.0",
+    "@fastify/multipart": "8.3.0",
     "@prisma/client": "4.10.1",
     "bcryptjs": "2.4.3",
     "dayjs": "1.11.7",
     "dotenv": "16.0.3",
     "fastify": "4.13.0",
+    "fastify-multipart": "5.4.0",
     "multer": "1.4.5-lts.1",
     "zod": "3.22.3"
   }
