--- a/package.json
+++ b/package.json
@@ -41,14 +41,16 @@
     "vitest": "0.28.5"
   },
   "dependencies": {
-    "@fastify/cookie": "8.3.0",
+    "@fastify/cookie": "10.0.1",
+    "@fastify/cors": "10.0.1",
     "@fastify/jwt": "6.7.0",
-    "@fastify/multipart": "8.3.0",
+    "@fastify/multipart": "9.0.1",
     "@prisma/client": "5.19.1",
     "bcryptjs": "2.4.3",
     "dayjs": "1.11.7",
     "dotenv": "16.0.3",
-    "fastify": "4.13.0",
+    "fastify": "5.0.0",
+    "fastify-cors": "6.1.0",
     "fastify-multipart": "5.4.0",
     "jsonwebtoken": "9.0.2",
     "multer": "1.4.5-lts.1",
