--- a/package.json
+++ b/package.json
@@ -54,6 +54,7 @@
     "fastify-multipart": "5.4.0",
     "jsonwebtoken": "9.0.2",
     "multer": "1.4.5-lts.1",
+    "tempemailvalidator": "2.1.2",
     "zod": "3.22.3"
   }
 }
